# CmonCrawl

./: .env.sample  .pre-commit-config.yaml  Description.md  Dockerfile  HOW_TO_RUN.md  LICENSE  Makefile  README.md  README_docker.md  aggregate.sh  docker-compose-sample.yml  docker-compose.yml  download_article.py  entrypoint.sh  environment.yml  genindex.html  grid_run.sh  index.html  modules.html  objects.inv  process.sh  process_article.py  py-modindex.html  pyproject.toml  pyrightconfig.json  requirements-test.txt  requirements.dev.txt  requirements.test.txt  requirements.txt  run.sh  search.html  searchindex.js  usage.html
.github/workflows/: release.yml  sphinx_build.yml  test_and_push.yml  test_and_types.yml
Aggregator/: Dockerfile  aggregate.sh  aggregator.py  constants.py  distributed_queue.py  environment.yml  errors.py  index_query.py  main.py  reddis_helpers.py  requirements.txt  unit_tests.py  utils.py
Aggregator/App/: aggregator.py  index_query.py  ndjson_decoder.py  utils.py
Aggregator/redis_duplicates/: Dockerfile  reddis_helpers.py  redis.conf
Aggregator/tests/: aggregator_tests.py
Artemis/: Dockerfile  adjust_config.py  create_artemis.sh
Artemis/artemis-create/schema/: activemq.xsd
Artemis/artemis-create/web/: activemq-branding.war  artemis-plugin.war
Artemis/config/: artemis-roles.properties  artemis-users.properties  broker.xml
Artemis/test/etc/: artemis-roles.properties  artemis-users.properties  artemis.profile  bootstrap.xml  broker.xml  jolokia-access.xml
Processor/: Dockerfile  environment.yml  process.sh  process_article.py  processor.py  requirements.txt  utils.py
Processor/App/: config.json  processor.py  processor_utils.py
Processor/App/ArticleUtils/: article_extractor.py  (+1 more)
Processor/ArticleUtils/: article_extractor.py  article_utils.py
Processor/DoneExtractors/: DummyExtractor.py  aktualne_cz.py  aktualne_cz_old.py  aktualne_cz_old_old.py  idnes_cz.py  idnes_cz_old.py  irozhlas_cz.py  novinky_cz.py  novinky_cz_old.py  seznamzpravy_cz.py
Processor/Downloader/: download.py  errors.py  warc.py
Processor/Extractor/: DummyExtractor.py  extractor.py  extractor_utils.py
Processor/OutStreamer/: outstreamer.py  stream_to_file.py
Processor/Pipeline/: pipeline.py
Processor/Router/: router.py  xd.py
Processor/UserDefined/: cz_config.json
Processor/UserDefinedExtractors/: DummyExtractor.py  aktualne_cz.py  idnes_cz.py  irozhlas_cz.py  novinky_cz.py  novinky_cz_old.py  seznamzpravy_cz.py
Processor/tests/: processor_tests.py  user_defined_extractors_tests.py
UserDefineExtractors/: aktualne_cz.py
UserDefinedExtractors/: DummyExtractor.py  aktualne_cz.py  idnes_cz.py  seznamzpravy_cz.py
_sources/cli/: extract.rst.txt  index.rst.txt
_sources/misc/: index.rst.txt
_sources/prog_guide/: index.rst.txt  practice.rst.txt
article_utils/: article_data.py  article_extractor.py  article_utils.py
cli/: cli.html  download.html  extract.html
cmoncrawl/: config.py
cmoncrawl/aggregator/: athena_query.py  base.py  gateway_query.py  index_query.py
cmoncrawl/common/: caching.py  loggers.py  throttling.py  types.py
cmoncrawl/integrations/: commands.py  download.py  extract.py  utils.py
cmoncrawl/middleware/: artemis.py  stompware.py  synchronized.py
docs/source/: conf.py  usage.rst
examples/code-usage/: offline-warc-iteration.py
examples/extractor_tutorial/: config.json  docker-compose.yml
extraction/: creating_extractor.html
extractors/: my_extractor.py
misc/: athena.html
processed_articles/directory_0/: cz_Zlom kauzy D_0.json
prog_guide/: practice.html
tests/: aggregator_test.py  aggregator_tests.py  athena_test.py  athena_tests.py  end_to_end_test.py  end_to_end_tests.py  gateway_test.py  helpers_test.py  processor_test.py  processor_tests.py  user_defined_extractors_tests.py  utils.py
tests/test_extract/: cfg.json  cfg_invalid.json
tests/test_routes/: a.py  b.py
unit_tests/: aggregator_tests.py  processor_tests.py  redis_tests.py  unit_tests.py  user_defined_extractors_tests.py
unit_tests/aggregator_tests_resources/: crawler_empty_title.html
unit_tests/test_routes/: a.py  b.py
(+1885 files in other folders)
