[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "CmonCrawl"
version = "0.9.0"
dependencies = [
"aiofiles==0.8.0",
"aiohttp==3.8.1",
"aiosignal==1.2.0",
"async-timeout==4.0.2",
"attrs==21.4.0",
"beautifulsoup4==4.11.1",
"bs4==0.0.1",
"charset-normalizer==2.1.0",
"dataclasses-json==0.5.7",
"docopt==0.6.2",
"frozenlist==1.3.0",
"idna==3.3",
"marshmallow==3.19.0",
"marshmallow-enum==1.5.1",
"multidict==6.0.2",
"mypy-extensions==1.0.0",
"packaging==23.1",
"six==1.16.0",
"soupsieve==2.3.2.post1",
"stomp.py==8.0.1",
"typing-inspect==0.8.0",
"typing_extensions==4.5.0",
"warcio==1.7.4",
"yarl==1.7.2"
]

keywords = [
  "Common Crawl",
  "Crawl",
  "Extractor",
  "Common Crawl Extractor",
  "Web Crawler",
  "Web Extractor",
  "Web Scraper",
]

readme = "README.md"
license = {file = "MIT"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools.packages.find]
include = ["cmoncrawl*"]
exclude = ["tests*", "docs*", "examples*"]

[project.scripts]
cmon = "cmoncrawl.integrations.commands:main"

[project.urls]
Source = "https://github.com/hynky1999/Rocnikovy-Projekt"
