[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "CmonCrawl"

dynamic = ["version"]

keywords = [
  "Common Crawl",
  "Crawl",
  "Extractor",
  "Common Crawl Extractor",
  "Web Crawler",
  "Web Extractor",
  "Web Scraper",
]

readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
[tool.setuptools_scm]


[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["cmoncrawl*"]
exclude = ["tests*", "docs*", "examples*"]

[project.scripts]
cmon = "cmoncrawl.integrations.commands:main"

[project.urls]
Source = "https://github.com/hynky1999/Rocnikovy-Projekt"
